<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Control de Horas</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calendario">Calendario</string>
    <string name="mesSiguiente">Siguiente</string>
    <string name="mesAnterior">Anterior</string>
    <string name="horasAcumuladas">H.Acumuladas</string>
    <string name="horasNormales">H.Recuperadas</string>
    <string name="horasExtra">H.Disfrutadas</string>
    <string name="horasArt54">H.Art 54</string>
    <string name="guardarHoras">Guardar Horas</string>
    <string name="horasNormalesMin">H.Recu</string>
    <string name="horasExtraMin">H.Disf</string>
    <string name="horasArt54Min">H.Art 54</string>
    <string name="title_activity_actualizar_horas">ActualizarHoras</string>
    <string name="title_activity_codigo_usuario">Codigo de Usuario</string>
    <string name="dni">Usuario</string>
    <string name="codigo">Contraseña</string>
    <string name="guardarCodigo">Acceder</string>
    <string name="title_activity_splash">Splash</string>

    <string name="enero">Enero</string>
    <string name="febrero">Febrero</string>
    <string name="marzo">Marzo</string>
    <string name="abril">Abril</string>
    <string name="mayo">Mayo</string>
    <string name="junio">Junio</string>
    <string name="julio">Julio</string>
    <string name="agosto">Agosto</string>
    <string name="septiembre">Septiembre</string>
    <string name="octubre">Octubre</string>
    <string name="noviembre">Noviembre</string>
    <string name="diciembre">Diciembre</string>

    <string name="lunes">L</string>
    <string name="martes">M</string>
    <string name="miercoles">MI</string>
    <string name="jueves">J</string>
    <string name="viernes">V</string>
    <string name="sabado">S</string>
    <string name="domingo">D</string>

    <string name="cerrar_sesion">¿Desea cerrar la sesión?</string>



</resources>
