<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.inwo.inwo_horasextra.ActualizarHoras"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rojo"
        android:padding="15dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horasNormales"
            android:id="@+id/tvHorasNormalesGuardar"
            android:textSize="20dp"
            android:textColor="@color/blanco"
            android:layout_weight="1"
            android:layout_marginRight="10dp" />

        <EditText
            android:id="@+id/etHorasNormalesGuardar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/blanco"
            android:textSize="20dp"
            android:inputType="numberDecimal"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rojo"
        android:padding="15dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horasExtra"
            android:id="@+id/tvHorasExtraGuardar"
            android:textSize="20dp"
            android:textColor="@color/blanco"
            android:layout_weight="1"
            android:layout_marginRight="10dp" />

        <EditText
            android:id="@+id/etHorasExtraGuardar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/blanco"
            android:textSize="20dp"
            android:inputType="numberDecimal"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rojo"
        android:padding="15dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horasArt54"
            android:id="@+id/tvHorasArt54Guardar"
            android:textSize="20dp"
            android:textColor="@color/blanco"
            android:layout_weight="1"
            android:layout_marginRight="10dp" />

        <EditText
            android:id="@+id/etHorasArt54Guardar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/blanco"
            android:textSize="20dp"
            android:inputType="numberDecimal"
            android:gravity="right" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardarHoras"
        android:id="@+id/btnGuardarHoras"
        android:background="@drawable/boton_rojo"
        android:textColor="@color/blanco"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="20dp" />

</LinearLayout>
