<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layCabecera"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logo1"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logo2"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="32dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Mes"
        android:id="@+id/textView3"
        android:layout_gravity="center_vertical"
        android:textSize="24dp"
        android:layout_marginLeft="10dp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listaDias"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_margin="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horasAcumuladas"
            android:id="@+id/horasAcumuladas"
            android:textSize="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/horasAcumuladasResultado"
            android:background="@drawable/cell_shape"
            android:textSize="24dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mesAnterior"
            android:id="@+id/mesAnterior"
            android:layout_weight="1"
            android:background="@drawable/boton_rojo"
            android:textColor="@color/blanco"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mesSiguiente"
            android:id="@+id/mesSiguiente"
            android:layout_weight="1"
            android:background="@drawable/boton_rojo"
            android:textColor="@color/blanco"/>
    </LinearLayout>

</LinearLayout>
