<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.inwo.inwo_horasextra.ActualizarHoras"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="140dp"
            android:layout_height="35dp"
            android:id="@+id/textView3"
            android:gravity="center_horizontal"
            android:textSize="32dp"
            android:layout_weight="0.22"
            android:background="@drawable/logo"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="indústria"
            android:id="@+id/textView"
            android:layout_gravity="center_vertical"
            android:textSize="30dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:textColor="#827f81" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rojo"
        android:padding="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dni"
            android:id="@+id/nomUsuario"
            android:textSize="20dp"
            android:textColor="@color/blanco"
            android:layout_weight="1"
            android:layout_marginRight="10dp" />

        <EditText
            android:id="@+id/textNomUsuario"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/blanco"
            android:textSize="20dp"
            android:inputType="text"
            android:gravity="right"
            android:textColor="#827f81" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rojo"
        android:padding="15dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codigo"
            android:id="@+id/tvCodigoUsuario"
            android:textSize="20dp"
            android:textColor="@color/blanco"
            android:layout_weight="1"
            android:layout_marginRight="10dp" />

        <EditText
            android:id="@+id/textPassUsuario"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/blanco"
            android:textSize="20dp"
            android:inputType="numberDecimal"
            android:gravity="right"
            android:textColor="#827f81" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardarCodigo"
        android:id="@+id/btnAcceder"
        android:background="@drawable/boton_rojo"
        android:textColor="@color/blanco"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/viewMensaje"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="#827f81" />

</LinearLayout>